2015-10-21  Richard Biener  <rguenther@suse.de>

PR tree-optimization/68026
	* tree-ssa-ccp.c (get_value_for_expr): Zero-extend mask for
	unsigned VARYING values.

	* gcc.dg/tree-ssa/ssa-ccp-39.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@229117 138bc75d-0d04-0410-961f-82ee72b054a4